# relocation-scout

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  e2e-playwright.yml
backend/: Dockerfile
backend/src/relocation_scout/: config.py  dependencies.py  main.py
backend/tests/unit/: test_contracts.py  test_demo_failures.py  test_deterministic.py  test_runtime_config.py  test_workflow_serialization.py
data/: demo_preferences.json  listings_amsterdam.json  neighbourhood_facts.json
docs/: architecture.md  contracts.md  demo-script.md  evaluation.md  recovery.md  roadmap.md  threat-model.md  workflow.md
docs/decisions/: 001-sqlite-first.md  002-explicit-workflow-controller.md  003-human-approval-gateway.md  004-agent-framework-isolation.md
docs/site/: package-lock.json  package.json  svelte.config.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vitest.config.ts
frontend/e2e/: app-shell.spec.ts  fixtures.ts  routes-smoke.spec.ts
frontend/e2e/a11y/: key-pages.spec.ts
frontend/e2e/failure/: phase-4-failures.spec.ts
frontend/e2e/flows/: phase-2-core-flows.spec.ts
frontend/e2e/helpers/: a11y.ts  demoState.ts  searches.ts
frontend/e2e/pages/: audit-page.spec.ts  demo-page.spec.ts  listing-detail-page.spec.ts  listings-page.spec.ts  shortlist-page.spec.ts  workflow-page.spec.ts
frontend/e2e/smoke/: mobile-smoke.spec.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: actions.ts  audit.ts  client.test.ts  client.ts  demo.ts  health.ts  listings.test.ts  listings.ts  searches.test.ts  searches.ts  workflow.ts
frontend/src/components/: EmptyState.tsx  HeaderBar.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/types/: index.ts
scripts/: README.md  run_adk.py  run_adk.sh  test_adk.sh
(+71 files in other folders)
